--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,15 @@
 <!DOCTYPE html>
-<h1>
-    Hello World!
-</h1>
+<head>
+    <title>GoDesigner</title>
+</head>
+<body>
+    <h1>GoDesigner</h1>
+    <form action="{{url_for('generate')}}" method="post">
+        <input type="text" name="prompt" placeholder="Imagine Anything!" required="required" /><br>
+        <button type="submit" class="btn"> Generate </button>
+    </form>
+    {% if generated_image %}
+        <img src="{{ generated_image }}" alt="Generated image">
+    {% endif %}
+</body>
 </html>
