--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
         <button type="submit" class="btn"> Generate </button>
     </form>
 
-        <img src="{{ generated_image }}" alt="Generated image">
+        {{ generated_image }}
 
 </body>
 </html>
